--- a/marbles/web/css/defaultPurposeStyle.css
+++ b/marbles/web/css/defaultPurposeStyle.css
@@ -188,3 +188,22 @@ ul {
 	padding: 0px 10px;
 	text-align:center;
 }
+
+#footer {
+	width: 90%;
+	padding-bottom: 30px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#footerLeft {
+	width: 50%;
+	float: left;
+	text-align: left;
+}
+
+#footerRight {
+	width: 50%;
+	float: left;
+	text-align: right;
+}
